--- a/Web_Programming/homework/Hero.html
+++ b/Web_Programming/homework/Hero.html
@@ -162,8 +162,8 @@
                             히어로의 강력한 딜링 능력은 하늘을 찌르는 최종 데미지 증가량에서 나온다. 기본적으로 웨폰 마스터리와 어드밴스드 콤보를 통해 상시 142%를 확보할 수
                             있으며, 보스전에서는 인레이지 사용으로 인해 202.5%에 도달할 수 있는데, 이 수치는 영구적으로 얻을 수 있는 가장 높은 수치이다. 여기에 소드 일루전 사용 시
                             8초 동안 추가로 최종뎀을 끌어올 수 있고, 극딜시 콤보 인스팅트와 오라 웨폰 또한 곱해지기에 실전에서 적용되는 수치는 그야말로 하늘을 찌른다. 반면 이렇게 높은
-                            최종 데미지에 대한 역보정으로 보총 데미지는 매우 낮게 설정되어 있고, 크리티컬 데미지도 높은 편이 아닌데, 이는 다시 말하자면 <strong>높은 투자
-                                효율</strong>로 직결된다. 또한 높은 최종데미지 덕분에 전 직업 중에서도 스탯 공격력이 최상위권에 달하는데, 이는 5차 공용 스킬을 사용할때 장점이
+                            최종 데미지에 대한 역보정으로 보총 데미지는 매우 낮게 설정되어 있고, 크리티컬 데미지도 높은 편이 아닌데, 이는 다시 말하자면 높은 투자
+                                효율로 직결된다. 또한 높은 최종데미지 덕분에 전 직업 중에서도 스탯 공격력이 최상위권에 달하는데, 이는 5차 공용 스킬을 사용할때 장점이
                             된다. 5차 공용 스킬은 어떤 직업이 사용하든 퍼뎀이 통일되어 있기 때문에 기초 능력치가 뛰어난 직업이 이득을 보게 된다. 히어로는 자력으로 최종 데미지를 최소 2배
                             이상 끌어올릴 수 있기에 5차 공용 스킬의 효율을 최대한 뽑아낼 수 있다.
                             <br><br>
@@ -176,7 +176,7 @@
                         <h1 class="title">단점</h1>
                         <p>
                             <strong>낮은 기본 크리티컬 확률</strong><br>
-                            기본 크리티컬 확률이 전 직업 최저 수치인 <strong>25%</strong>로 찬스 어택으로 20% 올라가는 것밖에 없다. 때문에 200 이전의 육성 중에
+                            기본 크리티컬 확률이 전 직업 최저 수치인 25%로 찬스 어택으로 20% 올라가는 것밖에 없다. 때문에 200 이전의 육성 중에
                             낮은 크리티컬 수치로 인해 원킬컷을 맞추기가 매우 까다롭고 데미지 편차가 상당해서 어떤 직업보다도 크리티컬 확률 수급이 절실하다. 또한 보공 및 방무, 공마 수급만
                             신경쓰면 되는 대부분의 직업과 달리, 히어로는 추가로 크확 수급까지 꾸준히 계산하며 스탯을 조절해야 한다.
                         </p>
@@ -196,8 +196,8 @@
                         <br>
                         <h1 class="title">보스전 운용</h1>
                         <p>
-                            쉽고 강하다. 어지간한 스킬들이 죄다 <strong>최종 데미지</strong>에 관여하기도 하고, 조작 난이도도 쉬워서 단순히 공격에만 집중할 수 있어
-                            피로도도 적으며, 무엇보다도 5차 이후 강력한 극딜기와 <strong>무적</strong>을 포함한 유틸기들이 주어지기 때문이다. 따라서 육성 과정을 제외한 자본
+                            쉽고 강하다. 어지간한 스킬들이 죄다 최종 데미지에 관여하기도 하고, 조작 난이도도 쉬워서 단순히 공격에만 집중할 수 있어
+                            피로도도 적으며, 무엇보다도 5차 이후 강력한 극딜기와 무적을 포함한 유틸기들이 주어지기 때문이다. 따라서 육성 과정을 제외한 자본
                             투자 대비 효율은 좋다.
                             <br><br>
                             평딜은 인레이지를 켜고, 60초 주기로 인사이징 디버프를 먹이면서 콤보 카운터 완충 후 강화된 레이징 블로우+레이지 업라이징으로 무한 공격하면 된다. 특히
