--- a/Web_Programming/homework/Arch Mage (Ice, Lightning).html
+++ b/Web_Programming/homework/Arch Mage (Ice, Lightning).html
@@ -33,7 +33,7 @@
                             <li class="inner-menu-item"><a href="Paladin.html">팔라딘</a></li>
                             <li class="inner-menu-item"><a href="Dark%20Knight.html">다크나이트</a></li>
                             <li class="inner-menu-item"><a href="Arch%20Mage%20(Fire,%20Poison).html">아크메이지(불,독)</a></li>
-                            <li class="inner-menu-item"><a href="Arch Mage (Ice, Lightning).html">아크메이지(썬,콜)</a></li>
+                            <li class="inner-menu-item"><a href="Arch%20Mage%20(Ice,%20Lightning).html">아크메이지(썬,콜)</a></li>
                             <li class="inner-menu-item"><a href="Bishop.html">비숍</a></li>
                             <li class="inner-menu-item"><a href="Bowmaster.html">보우마스터</a></li>
                             <li class="inner-menu-item"><a href="Marksman.html">신궁</a></li>
@@ -256,7 +256,7 @@
                         <li><a href="Paladin.html">팔라딘</a></li>
                         <li><a href="Dark%20Knight.html">다크나이트</a></li>
                         <li><a href="Arch%20Mage%20(Fire,%20Poison).html">아크메이지(불,독)</a></li>
-                        <li><a href="Arch Mage (Ice, Lightning).html">아크메이지(썬,콜)</a></li>
+                        <li><a href="Arch%20Mage%20(Ice,%20Lightning).html">아크메이지(썬,콜)</a></li>
                         <li><a href="Bishop.html">비숍</a></li>
                         <li><a href="Bowmaster.html">보우마스터</a></li>
                         <li><a href="Marksman.html">신궁</a></li>
