--- a/Web_Programming/homework/Index.html
+++ b/Web_Programming/homework/Index.html
@@ -211,7 +211,7 @@
                 </a>
                 <a href="Arch%20Mage%20(Ice,%20Lightning).html">
                     <div class="item">
-                        <img src="image/Arch%20Mage%20(Fire,%20Poison).webp" alt="아크메이지(썬,콜)">
+                        <img src="image/Arch%20Mage%20(Ice,%20Lightning).webp" alt="아크메이지(썬,콜)">
                         <h1>모험가 마법사 아크메이지(썬,콜)</h1>
                     </div>
                 </a>
@@ -325,15 +325,13 @@
                 </a>
                 <a href="Luminous.html">
                     <div class="item">
-                        <img src="image/Luminous.webp"
-                            alt="루미너스">
+                        <img src="image/Luminous.webp" alt="루미너스">
                         <h1>영웅 마법사 루미너스</h1>
                     </div>
                 </a>
                 <a href="Mercedes.html">
                     <div class="item">
-                        <img src="image/Mercedes.webp"
-                            alt="메르세데스">
+                        <img src="image/Mercedes.webp" alt="메르세데스">
                         <h1>영웅 궁수 메르세데스</h1>
                     </div>
                 </a>
@@ -448,8 +446,7 @@
                 </a>
                 <a href="Ho%20Young.html">
                     <div class="item">
-                        <img src="image/Ho%20Young.webp"
-                            alt="호영">
+                        <img src="image/Ho%20Young.webp" alt="호영">
                         <h1>아니마 도적 호영</h1>
                     </div>
                 </a>
